tests/snapshots/test_e2e__lexer@nested_expression.c.snap
---
source: tests/test_e2e.rs
expression: tokens
input_file: tests/test_programs/nested_expression.c
---
[
    IntKeyword,
    Identifier(
        "main",
    ),
    OpenParen,
    VoidKeyword,
    CloseParen,
    OpenBrace,
    ReturnKeyword,
    Hyphen,
    OpenParen,
    Hyphen,
    OpenParen,
    Constant(
        1,
    ),
    CloseParen,
    CloseParen,
    Semicolon,
    CloseBrace,
]
