tests/snapshots/test_e2e__lexer@unary_complement.c.snap
---
source: tests/test_e2e.rs
expression: tokens
input_file: tests/test_programs/unary_complement.c
---
[
    IntKeyword,
    Identifier(
        "main",
    ),
    OpenParen,
    VoidKeyword,
    CloseParen,
    OpenBrace,
    ReturnKeyword,
    Tilde,
    Constant(
        1,
    ),
    Semicolon,
    CloseBrace,
]
