tests/snapshots/test_e2e__lexer@unary_negation.c.snap
---
source: tests/test_e2e.rs
expression: tokens
input_file: tests/test_programs/unary_negation.c
---
[
    IntKeyword,
    Identifier(
        "main",
    ),
    OpenParen,
    VoidKeyword,
    CloseParen,
    OpenBrace,
    ReturnKeyword,
    Hyphen,
    Constant(
        1,
    ),
    Semicolon,
    CloseBrace,
]
