tests/snapshots/test_e2e__parser@binary_comparison.c.snap
---
source: tests/test_e2e.rs
expression: cmm_ast
input_file: tests/test_programs/binary_comparison.c
---
Program {
    function: Function {
        identifier: "main",
        body: Return {
            expression: Binary {
                operator: LessThan,
                left: IntegerConstant {
                    value: 1,
                },
                right: IntegerConstant {
                    value: 2,
                },
            },
        },
    },
}
