tests/snapshots/test_e2e__parser@binary_div.c.snap
---
source: tests/test_e2e.rs
expression: cmm_ast
input_file: tests/test_programs/binary_div.c
---
Program {
    function: Function {
        identifier: "main",
        body: Return {
            expression: Binary {
                operator: Divide,
                left: IntegerConstant {
                    value: 4,
                },
                right: IntegerConstant {
                    value: 2,
                },
            },
        },
    },
}
