tests/snapshots/test_e2e__parser@binary_modulo.c.snap
---
source: tests/test_e2e.rs
expression: cmm_ast
input_file: tests/test_programs/binary_modulo.c
---
Program {
    function: Function {
        identifier: "main",
        body: Return {
            expression: Binary {
                operator: Remainder,
                left: IntegerConstant {
                    value: 3,
                },
                right: IntegerConstant {
                    value: 2,
                },
            },
        },
    },
}
