tests/snapshots/test_e2e__parser@binary_mult.c.snap
---
source: tests/test_e2e.rs
expression: cmm_ast
input_file: tests/test_programs/binary_mult.c
---
Program {
    function: Function {
        identifier: "main",
        body: Return {
            expression: Binary {
                operator: Multiply,
                left: IntegerConstant {
                    value: 2,
                },
                right: IntegerConstant {
                    value: 3,
                },
            },
        },
    },
}
