tests/snapshots/test_e2e__parser@binary_or.c.snap
---
source: tests/test_e2e.rs
expression: cmm_ast
input_file: tests/test_programs/binary_or.c
---
Program {
    function: Function {
        identifier: "main",
        body: Return {
            expression: Binary {
                operator: Or,
                left: Binary {
                    operator: GreaterThan,
                    left: IntegerConstant {
                        value: 2,
                    },
                    right: IntegerConstant {
                        value: 3,
                    },
                },
                right: Binary {
                    operator: LessThan,
                    left: IntegerConstant {
                        value: 1,
                    },
                    right: IntegerConstant {
                        value: 2,
                    },
                },
            },
        },
    },
}
